--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unnamed.b.atv.sample">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -17,6 +17,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.SingleFragmentActivity" />
+        <activity android:name=".activity.ImagePickerActivity" />
     </application>
 
 </manifest>
